--- a/index.html
+++ b/index.html
@@ -11,6 +11,63 @@
 
 <body>
 
+    <div class="wrapper">
+        <header>
+            <div class="nav_top">
+                <div class="container">
+                    <div>
+                        <a href="mailto:rovers@gmail.com" title="rover@gmail.com">
+                            <i class="fa-solid fa-envelope"></i>
+                            <span>rover@gmail.com</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="tel:915556677" title="915556677">
+                            <i class="fa-solid fa-phone-flip"></i>
+                            <span>915556677</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Carrito">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                            <span>Carrito</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="Login">
+                            <i class="fa-solid fa-user-circle"></i>
+                            <span>Login</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <nav>
+                <div class="container">
+                    <figure class="logo">
+                        <a href="index.html">
+                            <img src="./images/logo.jpg" alt="rovers">
+                        </a>
+                    </figure>
+                    <div class="hamburguesa">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul class="menu">
+                        <li><a href="" class="activo">Item 1</a></li>
+                        <li><a href="">Item 2</a></li>
+                        <li><a href="">Item 3</a></li>
+                        <li><a href="">Item 4</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <div class="hero"></div>
+        <main></main>
+        <footer></footer>
+
+    </div>
+
 </body>
 
 </html>
