--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
                 </div>
             </nav>
         </header>
-        <div class="hero"></div>
-        <main></main>
-        <footer></footer>
+
+    </div>
+    <main></main>
+    <footer></footer>
 
     </div>
 
