--- a/index_resuelto.html
+++ b/index_resuelto.html
@@ -80,7 +80,47 @@
                 </ul>
             </div>
         </div>
-        <main></main>
+        <main>
+
+
+            <section id="ourservices">
+                <div class="container">
+                    <h2>Our <span>Services</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+
+                    <div class="grid">
+                        <article>
+                            <div><i class="fa-solid fa-gears"></i></div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ad beatae ipsum aut labore
+                                sed maxime veniam, sequi eius cupiditate!</p>
+                            <a href="" class="enlace">Leer mas <i class="fa-solid fa-long-arrow-alt-right"></i></a>
+                        </article>
+
+                        <article>
+                            <div><i class="fa-solid fa-truck"></i></div>
+                            <h3>2. Cocina moderna</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ad beatae ipsum aut labore
+                                sed maxime veniam, sequi eius cupiditate!</p>
+                            <a href="" class="enlace">Leer mas <i class="fa-solid fa-long-arrow-alt-right"></i></a>
+                        </article>
+
+                        <article>
+                            <div><i class="fa-solid fa-heart"></i></div>
+                            <h3>3. Servicio impecable</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ad beatae ipsum aut labore
+                                sed maxime veniam, sequi eius cupiditate!</p>
+                            <a href="" class="enlace">Leer mas <i class="fa-solid fa-long-arrow-alt-right"></i></a>
+                        </article>
+
+                    </div>
+                </div>
+
+            </section>
+        </main>
         <footer>
             <div class="container">
                 <p>Copyright &copy 2022 - <a href="#">Aviso legal</a> - <a href="#">Cookies</a></p>
