blogs colocados en desktop, fecha (falta alinear texto) falta darle estilo al texto debajo de la imagen y responsive

--- a/ourblogs.html
+++ b/ourblogs.html
@@ -56,9 +56,9 @@
                         </div>
                     </div>
                     <ul class="menu">
-                        <li><a href="index.html" class="activo">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="blog.html" class="activo">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
                 </div>
@@ -66,22 +66,92 @@
         </header>
         <main>
 
-            <section class="ourblogs">
+            <section id="ourblogs">
+                <div class="container">
 
+                    <h2>Our <span>Blogs</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="flex">
+                        <div class="blogs">
+
+                            <div class="blogs_img">
+                                <img src="./images/news3.jpg" alt="blog1">
+                                <div>05<br>Mar</div>
+                            </div>
+
+                            <div>
+                                <h3>Our weekly best foods</h3>
+                                <h4>Posted by rovers</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
+                                    consequuntur
+                                    porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                            </div>
+
+                            <a href="" class="enlace_blogs">Leer mas <i
+                                    class="fa-solid fa-long-arrow-alt-right"></i></a>
+
+                        </div>
+
+                        <div class="blogs">
+
+                            <div class="blogs_img">
+                                <img src="./images/news4.jpg" alt="blog1">
+                                <div>05<br>Mar</div>
+                            </div>
+
+                            <div>
+                                <h3>Our weekly best foods</h3>
+                                <h4>Posted by rovers</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
+                                    consequuntur
+                                    porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                            </div>
+
+                            <a href="" class="enlace_blogs">Leer mas <i
+                                    class="fa-solid fa-long-arrow-alt-right"></i></a>
+
+                        </div>
+
+                        <div class="blogs">
+
+                            <div class="blogs_img">
+                                <img src="./images/news1.jpg" alt="blog1">
+                                <div>05<br>Mar</div>
+                            </div>
+
+                            <div>
+                                <h3>Our weekly best foods</h3>
+                                <h4>Posted by rovers</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
+                                    consequuntur
+                                    porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                            </div>
+
+                            <a href="" class="enlace_blogs">Leer mas <i
+                                    class="fa-solid fa-long-arrow-alt-right"></i></a>
+
+                        </div>
+                    </div>
+                </div>
 
             </section>
+    </div>
+    </section>
 
-        </main>
-        <footer>
-            <div class="container">
-                <p>Copyright &copy 2022 - <a href="#">Aviso legal</a> - <a href="#">Cookies</a></p>
-            </div>
-        </footer>
-        <div class="arriba">
-            <a href="#top">
-                <i class="fa-solid fa-square-caret-up"></i>
-            </a>
+    </main>
+    <footer>
+        <div class="container">
+            <p>Copyright &copy 2022 - <a href="#">Aviso legal</a> - <a href="#">Cookies</a></p>
         </div>
+    </footer>
+    <div class="arriba">
+        <a href="#top">
+            <i class="fa-solid fa-square-caret-up"></i>
+        </a>
+    </div>
 
     </div>
 
