our blogs terminado con responsive. maquinon!

--- a/ourblogs.html
+++ b/ourblogs.html
@@ -83,15 +83,19 @@
                             </div>
 
                             <div>
-                                <h3>Our weekly best foods</h3>
-                                <h4>Posted by rovers</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
-                                    consequuntur
-                                    porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                                <div class="container_blogs">
+                                    <h3>Our weekly best foods</h3>
+                                    <h4>Posted by rovers</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
+                                        consequuntu porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                                    <a href="" class="enlace_blogs">Leer mas <i
+                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
+
+                                </div>
+
                             </div>
 
-                            <a href="" class="enlace_blogs">Leer mas <i
-                                    class="fa-solid fa-long-arrow-alt-right"></i></a>
+
 
                         </div>
 
@@ -103,15 +107,20 @@
                             </div>
 
                             <div>
-                                <h3>Our weekly best foods</h3>
-                                <h4>Posted by rovers</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
-                                    consequuntur
-                                    porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                                <div class="container_blogs">
+                                    <h3>Our weekly best foods</h3>
+                                    <h4>Posted by rovers</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
+                                        consequuntur
+                                        porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                                    <a href="" class="enlace_blogs">Leer mas <i
+                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
+
+
+                                </div>
                             </div>
 
-                            <a href="" class="enlace_blogs">Leer mas <i
-                                    class="fa-solid fa-long-arrow-alt-right"></i></a>
+
 
                         </div>
 
@@ -123,15 +132,19 @@
                             </div>
 
                             <div>
-                                <h3>Our weekly best foods</h3>
-                                <h4>Posted by rovers</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
-                                    consequuntur
-                                    porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+
+                                <div class="container_blogs">
+                                    <h3>Our weekly best foods</h3>
+                                    <h4>Posted by rovers</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla atque amet
+                                        consequuntur
+                                        porro quos natus! Sunt nulla iste laboriosam explicabo.</p>
+                                    <a href="" class="enlace_blogs">Leer mas <i
+                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
+                                </div>
                             </div>
 
-                            <a href="" class="enlace_blogs">Leer mas <i
-                                    class="fa-solid fa-long-arrow-alt-right"></i></a>
+
 
                         </div>
                     </div>
