nav de menu hecho, articulos hechos, estilos de fuente metidos. Falta hacer el responsive y cuadrar el precio arriba

--- a/index_resuelto.html
+++ b/index_resuelto.html
@@ -58,7 +58,7 @@
                     <ul class="menu">
                         <li><a href="index.html" class="activo">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="ourblogs.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
                 </div>
