--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@
         </header>
         <main>
 
-            <section id="menu">
+            <section id="todaysmenu">
                 <div class="container">
                     <h2>Today's <span>Menu</span></h2>
                     <div class="underline">
@@ -76,44 +76,49 @@
 
                     <div class="grid_menu">
                         <nav>
-                            <a href="#" class="active">Breakfast</a>
+                            <a href="#">Breakfast</a>
                             <a href="#">Lunch</a>
                             <a href="#">Dinner</a>
                             <a href="#">Others</a>
                         </nav>
-                        <div>
+                        <div class="offers">
                             <h5>Today's Hot Offers</h5>
                             <hr>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam magnam, at tenetur corporis
                                 magni ducimus temporibus facere nostrum deserunt dolor.</p>
                         </div>
-                        <article>
-                            <div>
-                                <img src="./images/t1.jpg" alt="chicken burger">
-                                <h3>Chicken Burguer With Cheese and Butter</h3>
-                                <sub>Vegetable and chicken burger with extra butter</sub>
-                                <a href="" class="enlace_blogs">Leer mas <i
-                                        class="fa-solid fa-long-arrow-alt-right"></i></a>
-                            </div>
-                        </article>
-                        <article>
-                            <div>
-                                <img src="./images/t4.jpg" alt="coffee">
-                                <h3>Coffee and Tea with Milk and Chocolate</h3>
-                                <sub>Vegetable and chicken burger with extra butter</sub>
-                                <a href="" class="enlace_blogs">Leer mas <i
-                                        class="fa-solid fa-long-arrow-alt-right"></i></a>
-                            </div>
-                        </article>
-                        <article>
-                            <div>
-                                <img src="./images/t3.jpg" alt="pizza">
-                                <h3>Hot Pizza With Extra Cheese and Butter</h3>
-                                <sub>Vegetable and chicken burger with extra butter</sub>
-                                <a href="" class="enlace_blogs">Leer mas <i
-                                        class="fa-solid fa-long-arrow-alt-right"></i></a>
-                            </div>
-                        </article>
+                        <div>
+                            <article>
+                                <div>
+                                    <img src="./images/t1.jpg" alt="chicken burger">
+                                    <h3>Chicken Burguer With Cheese and Butter</h3>
+                                    <sub>Vegetable and chicken burger with extra butter</sub>
+                                    <a href="" class="enlace_blogs">Leer mas <i
+                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
+                                    <p>$95</p>
+                                </div>
+                            </article>
+                            <article>
+                                <div>
+                                    <img src="./images/t4.jpg" alt="coffee">
+                                    <h3>Coffee and Tea with Milk and Chocolate</h3>
+                                    <sub>Vegetable and chicken burger with extra butter</sub>
+                                    <a href="" class="enlace_blogs">Leer mas <i
+                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
+                                    <p>$30</p>
+                                </div>
+                            </article>
+                            <article>
+                                <div>
+                                    <img src="./images/t3.jpg" alt="pizza">
+                                    <h3>Hot Pizza With Extra Cheese and Butter</h3>
+                                    <sub>Vegetable and chicken burger with extra butter</sub>
+                                    <a href="" class="enlace_blogs">Leer mas <i
+                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
+                                    <p>$40</p>
+                                </div>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </section>
