menu finalizado con responsive

--- a/menu.html
+++ b/menu.html
@@ -87,35 +87,39 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam magnam, at tenetur corporis
                                 magni ducimus temporibus facere nostrum deserunt dolor.</p>
                         </div>
-                        <div>
+                        <div class="container_art">
                             <article>
                                 <div>
                                     <img src="./images/t1.jpg" alt="chicken burger">
-                                    <h3>Chicken Burguer With Cheese and Butter</h3>
-                                    <sub>Vegetable and chicken burger with extra butter</sub>
-                                    <a href="" class="enlace_blogs">Leer mas <i
-                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
-                                    <p>$95</p>
+                                    <div>
+                                        <h3>Chicken Burguer With Cheese and Butter<span>$95</span></h3>
+                                        <sub>Vegetable and chicken burger with extra butter</sub>
+                                        <a href="" class="enlace_blogs">Leer mas <i
+                                                class="fa-solid fa-long-arrow-alt-right"></i></a>
+                                    </div>
                                 </div>
                             </article>
                             <article>
                                 <div>
                                     <img src="./images/t4.jpg" alt="coffee">
-                                    <h3>Coffee and Tea with Milk and Chocolate</h3>
-                                    <sub>Vegetable and chicken burger with extra butter</sub>
-                                    <a href="" class="enlace_blogs">Leer mas <i
-                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
-                                    <p>$30</p>
+                                    <div>
+                                        <h3>Coffee and Tea with Milk and Chocolate<span>$30</span></h3>
+                                        <sub>Vegetable and chicken burger with extra butter</sub>
+                                        <a href="" class="enlace_blogs">Leer mas <i
+                                                class="fa-solid fa-long-arrow-alt-right"></i></a>
+                                    </div>
                                 </div>
                             </article>
                             <article>
                                 <div>
                                     <img src="./images/t3.jpg" alt="pizza">
-                                    <h3>Hot Pizza With Extra Cheese and Butter</h3>
-                                    <sub>Vegetable and chicken burger with extra butter</sub>
-                                    <a href="" class="enlace_blogs">Leer mas <i
-                                            class="fa-solid fa-long-arrow-alt-right"></i></a>
-                                    <p>$40</p>
+                                    <div>
+                                        <h3>Hot Pizza With Extra Cheese and Butter<span>$40</span></h3>
+                                        <sub>Vegetable and chicken burger with extra butter</sub>
+                                        <a href="" class="enlace_blogs">Leer mas <i
+                                                class="fa-solid fa-long-arrow-alt-right"></i></a>
+
+                                    </div>
                                 </div>
                             </article>
                         </div>
