enlaces puestos, eliminar documentos innecesarios y solucionar pequeños detalles de hover.

--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
                 <div class="container">
                     <div>
                         <figure class="logo">
-                            <a href="index.html">
+                            <a href="index_resuelto.html">
                                 <img src="./images/logo.jpg" alt="rovers">
                             </a>
                         </figure>
@@ -56,9 +56,9 @@
                         </div>
                     </div>
                     <ul class="menu">
-                        <li><a href="index.html" class="activo">Home</a></li>
+                        <li><a href="index_resuelto.html" class="activo">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="ourblogs.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
                 </div>
