--- a/index_resuelto.html
+++ b/index_resuelto.html
@@ -45,7 +45,7 @@
                 <div class="container">
                     <div>
                         <figure class="logo">
-                            <a href="index.html">
+                            <a href="index_resuelto.html">
                                 <img src="./images/logo.jpg" alt="rovers">
                             </a>
                         </figure>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <ul class="menu">
-                        <li><a href="index.html" class="activo">Home</a></li>
+                        <li><a href="index_resuelto.html" class="activo">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="ourblogs.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
@@ -69,7 +69,8 @@
                 <h1>Las mejores hamburguesas del mundo</h1>
                 <h2>Bienvenido a nuestra hamburgueseria</h2>
                 <p>Come tan solo 15€</p>
-                <div><a href="#" class="boton">Nuestra carta <i class="fa-solid fa-long-arrow-alt-right"></i></a>
+                <div><a href="./menu.html" class="boton">Nuestra carta <i
+                            class="fa-solid fa-long-arrow-alt-right"></i></a>
                 </div>
 
 
